--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ build/
 
 
 C:\Users\mahesh.veer\Desktop\test_git\brownlogistic-1\src\test\java\com\nihi\bl\test.txt
+src/test/java/com/nihi/bl/test.txt
